syntax = "proto3";
package protocol;

enum ServerType {
  SERVER_TYPE_UNSPECIFIED = 0;
  SERVER_TYPE_CENTER = 1;
  SERVER_TYPE_LOGIN = 2;
  SERVER_TYPE_GAME = 3;
}

enum ServerRegisterResult {
  SERVER_REGISTER_RESULT_UNSPECIFIED = 0;
  SERVER_REGISTER_RESULT_SUCCESS = 1;
  SERVER_REGISTER_RESULT_ALREADY_REGISTERED = 2;
  SERVER_REGISTER_RESULT_INVALID_TYPE = 3;
  SERVER_REGISTER_RESULT_INVALID_VERSION = 4;
  SERVER_REGISTER_RESULT_INVALID_NAME = 5;
  SERVER_REGISTER_RESULT_INVALID_IP = 6;
  SERVER_REGISTER_RESULT_INVALID_PORT = 7;
  SERVER_REGISTER_RESULT_ERROR = 8;
}